# roust

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  installer.ps1  private_ips.json  roust-run.err  routes.json  test-route.json  test-routes.json
.cargo/: config.toml
.codex/skills/agent-exprience/: SKILL.md
.cursor/: key-points.mdc
.cursor/hooks/state/: continual-learning-index.json  continual-learning.json
.cursor/skills/docker-deploy/: SKILL.md
.cursor/skills/docker-deploy/samples/: run-on-docker-local.yaml  run-on-docker-server.ps1  run-on-docker-server.yaml
.cursor/skills/github-commit-push-all-repos/: SKILL.md  config.json
.cursor/skills/github-commit-push-all-repos/scripts/: commit-push-all-repos.ps1
.cursor/skills/request-preflight/: SKILL.md
.cursor/skills/skills-style-format/: SKILL.md
.github/workflows/: windows-build.yml
Roust/: ipv6.txt  routes.json
core/: Cargo.toml  README.md  build.rs  routes.json
core/docs/: HOW-IT-WORKS.md
core/src/: lib.rs  main.rs
core/src/api/: mod.rs
core/src/cli/: mod.rs
core/src/config/: mod.rs
core/src/core/: mod.rs  windivert_ffi.rs
core/src/network/: mod.rs  routes.rs
core/src/service/: mod.rs
docs/: HOW-IT-WORKS.md
gui/: index.html  package-lock.json  package.json
gui/src/: main.ts  styles.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: lib.rs  main.rs
installer/: roust.iss  stage.ps1
installers/: Dockerfile  install-on-docker.ps1  install-on-windows.ps1
release/: ipv4.txt
scripts/: Dockerfile  docker-compose.yml  install-on-docker.ps1  msvc-env.ps1  publish.ps1
src/: cli.rs  config.rs  lib.rs  main.rs  update.rs
src/api/: mod.rs
src/cli/: mod.rs
src/config/: mod.rs
src/core/: mod.rs  windivert_ffi.rs  windivert_run.rs
src/network/: mod.rs  routes.rs  stub.rs  win.rs
src/service/: mod.rs
src/setup/: mod.rs
