[package]
name = "roust"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI and argument parsing
# Pin below 4.6 so clap_derive does not require Cargo's unstable edition2024.
clap = { version = "=4.5.27", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Networking utilities
ipnetwork = "0.20"

# Windows-specific APIs
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_System_Memory",
    "Win32_System_Com",
] }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# System utilities
lazy_static = "1.4"

# For Windows Service support
windows-service = "0.7"
