[package]
name = "roust"
version = "0.1.0"
edition = "2021"

# docs.rs builds with this target so Windows APIs resolve correctly.
[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

[lib]
name = "roust"
path = "src/lib.rs"

[[bin]]
name = "roust-setup"
path = "src/bin/roust-setup.rs"

[dependencies]
# CLI and argument parsing
# Pin below 4.6 so clap_derive does not require Cargo's unstable edition2024.
clap = { version = "=4.5.27", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Networking utilities
ipnetwork = "0.20"

# Windows-specific APIs
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_System_Memory",
    "Win32_System_Com",
] }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# HTTP (blocking) for `roust update`
ureq = "2.12"

# ZIP extraction for `roust-setup` (WinDivert distribution); pin 0.6 for Rust 1.83 CI toolchains.
zip = { version = "=0.6.6", default-features = false, features = ["deflate"] }
# Pin transitive `url` so `idna_adapter` (Rust 1.86 / edition2024) is not pulled; CI uses Rust 1.83.
url = "=2.5.0"

# System utilities
lazy_static = "1.4"

# For Windows Service support
windows-service = "0.7"
