[package]
name = "roust-gui"
version = "0.1.0"
description = "Windows GUI for roust packet router"
authors = ["Armin"]
edition = "2021"

[lib]
name = "roust_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
roust = { path = "../.." }
